--- a/keyflow/typetest/templates/index.html
+++ b/keyflow/typetest/templates/index.html
@@ -27,7 +27,7 @@
                     <a href="/" class="navbar__links">MiniGames</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/register.html" class="button">Sign Up</a>
+                    <a href="register" class="button">Sign Up</a>
                 </li>
             </ul>
         </div>
