--- a/keyflow/typetest/templates/register.html
+++ b/keyflow/typetest/templates/register.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <body>
-    <form action="users/register/" method = "POST">
+    <form action="/" method = "POST">
         {% csrf_token %}
         {{ form }}
         <button>Sign Up</button>
