put account data into db fixes #17

--- a/keyflow/typetest/templates/register.html
+++ b/keyflow/typetest/templates/register.html
@@ -3,9 +3,9 @@
 <html lang="en">
 
 <body>
-    <form action="/" method = "POST">
+    <form action="/register/" method = "post">
         {% csrf_token %}
         {{ form }}
-        <button>Sign Up</button>
+        <input type = "submit" value="Sign Up" />
     </form>
 </body>
