added error checking in registration fixes #18

--- a/keyflow/typetest/templates/register.html
+++ b/keyflow/typetest/templates/register.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <body>
+    {% if error != "" %}
+        {{error}}
+    {%endif%}
     <form action="/register/" method = "post">
         {% csrf_token %}
         {{ form }}
