--- a/keyflow/typetest/templates/index.html
+++ b/keyflow/typetest/templates/index.html
@@ -1,36 +1,27 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KeyFlow</title>
+
+    {% block head %}
+   
+    {% endblock %}
 </head>
+<style>
+
+</style>
 <body>
-    <nav class="navbar">
-        <div class="navbar__container">
-            <a href="/" id="navbar__logo">KeyFlow</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/leaderboard.html" class="navbar__links">Leaderboard</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">MiniGames</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="register" class="button">Sign Up</a>
-                </li>
-            </ul>
-        </div>
-    </nav>    
+    {% block navbar %}
+    {% include  'navbar.html' %}
+    {% endblock %}
+
+    {% block content %}
+    
+    {% endblock %}
 </body>
 </html>
+
