--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -16,8 +16,8 @@
         </style>
         
         
-<!--Include Phaser.js 
+Include Phaser.js 
 <script src="{% static 'Phaser/phaser.min.js' %}"></script>
 Include your game logic script 
-<script src="{% static 'Phaser/game.js' %}"></script> -->
+<script src="{% static 'Phaser/game.js' %}"></script>
 {% endblock %}
