added to game.js, collect static #32

--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     
-        <!-- The Phaser game will render here -->
+        <div id="game-container"></div>
         <h1>Typing Test Game</h1>
         <p>Welcome to the typing test game. This is a simple test to check if the HTML renders.</p>
     
