Fixed server error with typetest.html #21

--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -15,9 +15,9 @@
         }
     </style>
     <!-- Include Phaser.js -->
-    <script src="{% static 'phaser/phaser.min.js' %}"></script>
+    <script src="{% static 'Phaser/phaser.min.js' %}"></script>
     <!-- Include your game logic script -->
-    <script src="{% static 'phaser/game.js' %}"></script>
+    <script src="{% static 'Phaser/game.js' %}"></script>
 </head>
 <body>
     
