--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Test</title>
+    <link 
+            rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
     <style>
         body {
             margin: 0;
@@ -13,18 +18,55 @@
         canvas {
             display: block;
         }
+        .diff {
+            display: flex;
+        }
+        .diff button, p {
+            margin-left: 10px;
+        }
+        .btn-extra-sm {
+            height: 30px;
+            width: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
     <!-- Include Phaser.js -->
     <script src="{% static 'Phaser/phaser.min.js' %}"></script>
     <!-- Include your game logic script -->
     <script src="{% static 'Phaser/game.js' %}"></script>
+    <!--bootstrap javascript-->
+    <script 
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+            crossorigin="anonymous"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+            crossorigin="anonymous"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+            crossorigin="anonymous"></script>
 </head>
 <body>
     
         <div id="game-container"></div>
         <h1>Typing Test Game</h1>
-        <p>Welcome to the typing test game. This is a simple test to check if the HTML renders.</p>
-    
+        <div class="diff">
+        <p>Welcome to the typing test game.</p>
+        <p>Difficulty Level: </p>
+            <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Difficulty
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuItems">
+                <button type="button" class="dropdown-item" value="Easy" name="difficulty">Easy</button>
+                <button type="button" class="dropdown-item" value="Medium" name="difficulty">Medium</button>
+                <button type="button" class="dropdown-item" value="Hard" name="difficulty">Hard</button>
+            </div>
+        </div>
+        <br>
     
     <!-- The Phaser game will render here -->
 </body>
