--- a/keyflow/typetest/templates/leaderboard.html
+++ b/keyflow/typetest/templates/leaderboard.html
@@ -1,2 +1,109 @@
 {% extends 'index.html' %}
 
+{% block content %}
+<body>
+    <link 
+            rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+    <!--bootstrap javascript-->
+    <script 
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+            crossorigin="anonymous"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+            crossorigin="anonymous"></script>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+            crossorigin="anonymous"></script>
+    <style>
+        .outer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .leaderboard {
+            text-align: center;
+        }
+        .leaderboard button, p {
+            margin-left: 10px;
+            margin-top: 15px;
+            margin-bottom: 20px;
+        }
+        .btn-extra-sm {
+            height: 30px;
+            width: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        td, th {
+            text-align: left;
+            padding: 8px;
+        }
+        .table {
+            margin-top: 35px;
+        }
+    </style>
+    <div class="outer">
+        <div class="leaderboard">
+            <div class="btn-group">
+                <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="gameMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Minigame
+                </button>
+                <div class="dropdown-menu" aria-labelledby="gameMenuButton" id="gameMenu">
+                    <button type="button" class="dropdown-item" value="Snowfall" name="snowfall">Snowfall</button>
+                </div>
+            </div>
+                <script>
+                    getMinigame()
+                    let minigame = null;
+                    function getMinigame() {
+                        const dropdown = document.querySelectorAll('.dropdown-item');
+                        const dropdownButton = document.getElementById('gameMenuButton');
+                        dropdown.forEach(item => {
+                            item.addEventListener('click',(e) => {
+                                e.preventDefault();
+                                minigame = e.currentTarget.value;
+                                dropdownButton.textContent = e.currentTarget.value;
+
+                                if(minigame) {
+                                    window.location.href = `/leaderboard/${encodeURIComponent(minigame)}/`;
+                                }
+
+                            })
+                        })
+                    }
+
+                </script>
+            <h3>Leaderboard for {{ minigame }}</h3>
+            <div class="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Rank</th>
+                            <th>Username</th>
+                            <th>High Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for stat in statistics %}
+                        <tr>
+                            <td>{{forloop.counter}}</td>
+                            <td>{{stat.username__username}}</td>
+                            <td>{{stat.snowFallHighScore}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                    
+                </table>
+            </div>
+        </div>
+    </div>
+
+</body>
+{% endblock %}
