display navbar on snowfall and typetest and resize game when window is resized fixes #59

--- a/keyflow/typetest/templates/snowfall.html
+++ b/keyflow/typetest/templates/snowfall.html
@@ -1,16 +1,26 @@
+{% extends 'index.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block head %}
     <title>Snowfall</title>
     <link 
             rel="stylesheet" 
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous">
-
+    <style>
+        #game-container {
+            width: 100%;
+            height: 100;
+        }
+    </style>
+{% endblock %}
+{% block content %}
+<body>
+    <div id="game-container"></div>
+    {% endblock %}
+</body>
+{% block scripts %}
      <!-- Include Phaser.js -->
      <script src="{% static 'Phaser/phaser.min.js' %}"></script>
      <!-- Include your game logic script -->
@@ -27,4 +37,4 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
             crossorigin="anonymous"></script>
-</head>
+{% endblock %}
