--- a/keyflow/typetest/templates/index.html
+++ b/keyflow/typetest/templates/index.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
     <link rel="stylesheet" href="{% static 'style.css' %}">
 <head>
     <meta charset="UTF-8">
@@ -21,6 +22,9 @@
 
     {% block content %}
     <a href="/snowfall/">Snowfall</a>
+    {% endblock %}
+
+    {% block scripts %}
    
     {% endblock %}
 </body>
