--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -1,9 +1,7 @@
+{% extends 'index.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block head %}
     <title>Typing Test</title>
     <link 
             rel="stylesheet" 
@@ -14,15 +12,23 @@
         body {
             margin: 0;
             padding: 0;
+            height: 100%;
+            overflow: hidden;
+
         }
         canvas {
             display: block;
         }
         .diff {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
         }
-        .diff button, p {
-            margin-left: 10px;
+        .header {
+            background-color: #CBCBCB;
+            width: 100%;
+            height: 65px;
         }
         .btn-extra-sm {
             height: 30px;
@@ -31,56 +37,65 @@
             justify-content: center;
             align-items: center;
         }
+        #game-container {
+            width: 100%;
+            height: 100;
+        }
+        #difficultyBtn {
+            margin-right: 20px;
+        }
+        .btn, .btn:hover {
+            margin-top: 17px;
+            background-color: #9900CC !important;
+        }
     </style>
-    <!-- Include Phaser.js -->
-    <script src="{% static 'Phaser/phaser.min.js' %}"></script>
-    <!-- Include your game logic script -->
-    <script src="{% static 'Phaser/game.js' %}"></script>
-    <!--bootstrap javascript-->
-    <script 
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-            crossorigin="anonymous"></script>
-        <script 
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
-            crossorigin="anonymous"></script>
-        <script 
-            src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
-            crossorigin="anonymous"></script>
-</head>
+{% endblock %}
+{% block content %}
 <body>
-    
-        <div id="game-container"></div>
-        <h1>Typing Test Game</h1>
+    <div class="header">
         <div class="diff">
-        <p>Welcome to the typing test game.</p>
-        <p>Difficulty Level: </p>
-        <div class="btn-group">
-            <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="difficultyMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Difficulty
-            </button>
-            <div class="dropdown-menu" aria-labelledby="difficultyMenuButton" id="difficultyMenu">
-                <button type="button" class="dropdown-item" value="Easy" name="difficulty">Easy</button>
-                <button type="button" class="dropdown-item" value="Medium" name="difficulty">Medium</button>
-                <button type="button" class="dropdown-item" value="Hard" name="difficulty">Hard</button>
+            <div class="btn-group" id="difficultyBtn">
+                <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="difficultyMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Difficulty
+                </button>
+                <div class="dropdown-menu" aria-labelledby="difficultyMenuButton" id="difficultyMenu">
+                    <button type="button" class="dropdown-item" value="Easy" name="difficulty">Easy</button>
+                    <button type="button" class="dropdown-item" value="Medium" name="difficulty">Medium</button>
+                    <button type="button" class="dropdown-item" value="Hard" name="difficulty">Hard</button>
+                </div>
+            </div>
+            <div class="btn-group">
+                    <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="timerMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Duration
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="timerMenuButton" id="timerMenu">
+                        <button type="button" class="dropdown-item" value="30" name="timer">30s</button>
+                        <button type="button" class="dropdown-item" value="60" name="timer">60s</button>
+                        <button type="button" class="dropdown-item" value="90" name="timer">90s</button>
+                    </div>
             </div>
         </div>
-        <div class="btn-group">
-        <p>Test Length:  </p>
-            <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="timerMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Duration
-            </button>
-            <div class="dropdown-menu" aria-labelledby="timerMenuButton" id="timerMenu">
-                <button type="button" class="dropdown-item" value="30" name="timer">30s</button>
-                <button type="button" class="dropdown-item" value="60" name="timer">60s</button>
-                <button type="button" class="dropdown-item" value="90" name="timer">90s</button>
-            </div>
-        </div>
-        </div>
-        <br>
-    
-    <!-- The Phaser game will render here -->
+    </div> 
+    <div id="game-container"></div>
+{% endblock %}
 </body>
-</html>
+    <!-- The Phaser game will render here -->
+{% block scripts %}
+<!-- Include Phaser.js -->
+<script src="{% static 'Phaser/phaser.min.js' %}"></script>
+<!-- Include your game logic script -->
+<script src="{% static 'Phaser/game.js' %}"></script>
+<!--bootstrap javascript-->
+<script 
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+        crossorigin="anonymous"></script>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" 
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+        crossorigin="anonymous"></script>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+        crossorigin="anonymous"></script>
+{% endblock %}
