--- a/keyflow/typetest/templates/leaderboard.html
+++ b/keyflow/typetest/templates/leaderboard.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load static %}
 
 {% block head %}
     <link 
@@ -8,31 +9,39 @@
     crossorigin="anonymous">
     <style>
         .outer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .leaderboard {
             text-align: center;
+            margin-top: 50px;
         }
-        .leaderboard button, p {
-            margin-left: 10px;
-            margin-top: 15px;
-            margin-bottom: 20px;
+
+        body {
+            background-color: #CBCBCB;
         }
+        
         .btn-extra-sm {
-            height: 30px;
-            width: 100px;
+            height: 50px;
+            width: 140px;
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 23px;
         }
         td, th {
             text-align: left;
             padding: 8px;
         }
-        .table {
-            margin-top: 35px;
+        table {
+            margin: 50px auto;
+            text-align: left;
+            border: 3px solid white;
+        }
+
+        .btn, .btn:hover {
+            background-color: #9900CC !important;
+            margin-left: 5px;
+        }
+
+        .outer h3 {
+            font-size: 40px;
         }
 
     </style>
@@ -43,15 +52,15 @@
 <body>
 
     <div class="outer">
-        <div class="leaderboard">
-            <div class="btn-group">
-                <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="gameMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Minigame
-                </button>
-                <div class="dropdown-menu" aria-labelledby="gameMenuButton" id="gameMenu">
-                    <button type="button" class="dropdown-item" value="Snowfall" name="snowfall">Snowfall</button>
+            <h3>Leaderboard for 
+                <div class="btn-group">
+                    <button class="btn btn-secondary btn-extra-sm dropdown-toggle" type="button" id="gameMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ minigame }}
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="gameMenuButton" id="gameMenu">
+                        <button type="button" class="dropdown-item" value="Snowfall" name="snowfall">Snowfall</button>
+                    </div>
                 </div>
-            </div>
                 <script>
                     getMinigame()
                     let minigame = null;
@@ -73,7 +82,7 @@
                     }
 
                 </script>
-            <h3>Leaderboard for {{ minigame }}</h3>
+            </h3>
             <div class="table">
                 <table>
                     <thead>
@@ -95,7 +104,6 @@
                     
                 </table>
             </div>
-        </div>
     </div>
 
 </body>
