--- a/keyflow/productionfiles/style.css
+++ b/keyflow/productionfiles/style.css
@@ -16,7 +16,7 @@ ul, ol, dl {
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: static;
   top: 0;
   z-index: 999;
   width: 100%;
