--- a/keyflow/typetest/templates/index.html
+++ b/keyflow/typetest/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #CBCBCB;
+            background-color: #f44336;
         }
 
         .homeContainer {
