added basic mode for obstacle game fixes #70

--- a/keyflow/typetest/templates/minigames.html
+++ b/keyflow/typetest/templates/minigames.html
@@ -48,7 +48,7 @@
         width: 33%;
     }
 
-    #snowfallLink{
+    #snowfallLink, #obstacleLink {
         color: #add8e6;
         font-size: 35px;
         text-decoration: none;
@@ -56,7 +56,7 @@
         text-shadow: 2px 2px 1px grey;
     }
 
-    #snowfallLink:hover {
+    #snowfallLink:hover, #obstacleLink:hover {
         text-decoration: underline;
         color: #add8e6;
     }
@@ -83,7 +83,7 @@
                 <a href="/snowfall/" id="snowfallLink">Snowfall</a>
             </div>
             <div class="minigame two">
-                <a id="soon">Coming Soon...</a>
+                <a href="/obstacles/" id="obstacleLink">Obstacles</a>
             </div>
             <div class="minigame three">
                 <a id="soon">Coming Soon...</a>
