button works, changed format of some functions

--- a/keyflow/typetest/templates/typetest.html
+++ b/keyflow/typetest/templates/typetest.html
@@ -58,13 +58,13 @@
         font-size: 1rem;
         padding: 5px 10px;
         }
-        .btn-success {
-        background-color: #28a745;
-        color: white;
+        #personalizedPractice.btn-success {
+        background-color: #28a745 !important;
+        color: white !important;
         }
-        .btn-secondary {
-        background-color: #6c757d;
-        color: white;
+        #personalizedPractice.btn-secondary {
+        background-color: #6c757d !important;
+        color: white !important;
         }
     </style>
 {% endblock %}
