--- a/keyflow/typetest/templates/profile.html
+++ b/keyflow/typetest/templates/profile.html
@@ -1,29 +1,179 @@
 {% extends 'index.html' %}
 
+{% block head %}
+<style>
+
+    .profileContainer {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .profileContainer h1 {
+        text-align: center;
+        color: #9900CC;
+    }
+
+    .topBox {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        height: 50%;
+    }
+
+    .profileInfo, .battlepassInfo {
+        flex: 1;
+    }
+
+    .battlepassInfo {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-top: 20px;
+    }
+
+    .bottomBox {
+        display: flex;
+        flex: 1;
+        height: 50%;
+    }
+
+    .box {
+        margin-top: 50px;
+        flex: 1;
+
+    }
+
+    .typetest {
+        text-align: center;
+    }
+
+    .typetest h4, .minigames h4 {
+        padding-bottom: 10px;
+    }
+
+    .minigames {
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+    }
+
+    .display {
+        display: flex;
+        width: 10vh;
+        height: 8vh;
+        border: 2px solid black;
+        background-color: rgba(255,255,255,0.6);
+        text-align: center;
+        border-radius: 10px;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .level {
+        width: 33%;
+    }
+
+    .xp {
+        width: 33%;
+    }
+
+    .profileInfo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 15px;
+
+    }
+
+    .pfp {
+        width: 20vh;
+        height: 20vh;
+        border: 2px solid black;
+        background-color: rgba(255,255,255);
+        text-align: center;
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 20px;
+    }
+
+    .profile-actions button[type='submit'] {
+      background-color: #9900CC;
+      color: white;
+      border: none;
+      outline: none;
+      border-radius: 4px;
+      width: 30%;
+      height: 5vh;
+      font-size: 17px;
+    }
+
+    .profile-actions {
+        margin-top: auto;
+        text-align: center;
+    }
+
+    .text h2 {
+        padding: 5px;
+        font-size: 40px;
+    }
+
+    .text {
+        text-align: right;
+        margin-top: 5px;
+    }
+
+
+</style>
+{% endblock %}
+
 {% block content %}
 <body>
-    
-    <div class="profile-container">
-        <h1>Welcome, {{ user.username }}!</h1>
-        
-        
-        <div class="profile-info">
-            <h2>Your Profile</h2>
-            <p><strong>Username:</strong> {{ user.username }}</p>
-            <p><strong>Email:</strong> {{ user.emailAddress }}</p>
-            <p><strong>Date Joined:</strong> {{ user.date_joined|date:"F j, Y" }}</p>
+
+    <div class="profileContainer">
+        <div class="topBox">
+            <div class="profileInfo">
+                <div class="text">
+                    <h2>{{user.username}}</h2>
+                    <h5>{{user.emailAddress}}</h5>
+                </div>
+                <div class="pfp">
+                </div>
+            </div>
+            <div class="battlepassInfo">
+                <div class="display level">
+                    <h4>Battlepass Level: {{user.level}} </h4>
+                </div>
+                <div class="display xp">
+                    <h4>Total XP: {{user.xp}} </h4>
+                </div>
+            </div>
+
         </div>
-        <div class="statistics">
-            <h2>Your Statistics</h2>
-            <p><strong>Average WPM: </strong>{{avgWPM}}</p>
-            <p><strong>Average Accuracy: </strong>{{accuracy}}%</p>
-            <p><strong>Top 5 Frequently Missed Letters: </strong></p>
-            {% for item in lettersMissed %}
-                <li>{{item}}</li>
-            {% endfor %}
+        <h1>Statistics</h1>
+        <div class="bottomBox">
+            <div class="box typetest">
+                <h4><u>Average WPM:</u> {{avgWPM}}</h4>
+                <h4><u>Average Accuracy:</u> {{accuracy}}</h4>
+                <h4><u>Top 5 Frequently Missed Letters:</u> </h4>
+                <h4>{% for item in lettersMissed %}
+                    {{item}}
+                {% endfor %}
+                </h4>
+            </div>
+            <div class="box minigames">
+                <h4><u>Snowfall High Score:</u> {{snowHigh}}</h4>
+                <h4><u>Obstacle Game High Score:</u> {{obstacleHigh}}</h4>
+            </div>
         </div>
-        <b>Level: {{user.level}}</b><br>
-        <b>XP: {{user.xp}}</b>
 
         <div class="profile-actions">
             <form id="logout-form" method="post" action="{% url 'logout' %}">
@@ -31,11 +181,11 @@
                 <button type="submit" class="button">Logout</button>
               </form>
         </div>
+
+        <footer>
+            <p>KeyFlow &copy; 2024. All rights reserved.</p>
+        </footer>
     </div>
 
-    
-    <footer>
-        <p>KeyFlow &copy; 2024. All rights reserved.</p>
-    </footer>
 </body>
 {% endblock %}
