--- a/keyflow/typetest/templates/obstacle.html
+++ b/keyflow/typetest/templates/obstacle.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    <title>Obstacle Game</title>
+    <title>SnowSlope</title>
     <link 
             rel="stylesheet" 
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
