create EquippedItems table closes #87

--- a/keyflow/typetest/templates/profile.html
+++ b/keyflow/typetest/templates/profile.html
@@ -146,6 +146,12 @@
                     <h5>{{user.emailAddress}}</h5>
                 </div>
                 <div class="pfp">
+                    <img id="pfpimg" src="" />
+                <script>
+                    imgName = "{{profilepicture}}";
+                    imgElement.src = `./../static/images/${imgName}pfp.png`;
+                    
+                </script>
                 </div>
             </div>
             <div class="battlepassInfo">
