--- a/keyflow/typetest/templates/battlepass.html
+++ b/keyflow/typetest/templates/battlepass.html
@@ -1,31 +1,145 @@
 {% extends 'index.html' %}
 
+{% load static %}
 <head>
-    <style>
-        
-    </style>
+    <!-- Linking Google fonts for icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=check_circle" />
+
+    <link rel="stylesheet" href="style.css">
 </head>
 {% block content %}
-<body>
-    <h2>BattlePass Rewards</h2><br>
-    <script>
-        function display_image(src){
-            let img = document.createElement("img")
-
-            img.src = src;
-            document.body.appendChild(img)
-        }
-        
-
-        const userLevel = {{user.level}};
-        for(let i = 1; i <= 10; ++i){
-            display_image(`./../static/images/level${i}.png`);
-        }
-
-        /*for(let j = userLevel+1; j <= 3; ++j){
-            display_image(`./../static/images/level${j}grey.png`);
-        }*/
-
-    </script>
-</body>
+<cardbody>
+    <h2 class = battlepass-header>BattlePass Rewards</h2>
+    <div class="card-container">
+        <div class="card-wrapper">
+           <!-- Card slides container -->
+            <ul class="card-list ">
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level1.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Garfield Profile Photo</p>
+                        <h2 class="card-title">Level 1</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 200</p>
+                            <p class="card-game">Equip in: Profile</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level2.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Pig Avatar</p>
+                        <h2 class="card-title">Level 2</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 300</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level3.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Trashcan Obstacle</p>
+                        <h2 class="card-title">Level 3</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 450</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level4.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Gojo Profile Picture</p>
+                        <h2 class="card-title">Level 4</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 675</p>
+                            <p class="card-game">Equip in: Profile</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level5.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Duck Avatar</p>
+                        <h2 class="card-title">Level 5</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 1000</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level6.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Tree Obstacle</p>
+                        <h2 class="card-title">Level 6</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 1500</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+                <li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level7.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Freddy Fazbear Profile Photo</p>
+                        <h2 class="card-title">Level 7</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 2300</p>
+                            <p class="card-game">Equip in: Profile</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li><li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level8.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Fortnite Avatar</p>
+                        <h2 class="card-title">Level 8</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 3400</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li><li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level9.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Mountain Obstacle</p>
+                        <h2 class="card-title">Level 9</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 5100</p>
+                            <p class="card-game">Equip in: Snowslope</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li><li class="card-item ">
+                    <div class="card-link">
+                        <img src="{% static 'images/level10.png' %}" alt="Card Image" class="card-image">
+                        <p class="badge">Snowfall Background</p>
+                        <h2 class="card-title">Level 10</h2>
+                        <div class="card-details">
+                            <p class="card-xp">XP Required: 7500</p>
+                            <p class="card-game">Equip in: Snowfall</p>
+                        </div>
+                        <button class="card-button">Equip</button>
+                    </div>
+                </li>
+            </ul>
+            
+        </div>
+    </div>
 {% endblock %}
+{% block scripts %}
+    <script>
+        var csrfToken = "{{ csrf_token }}"
+    </script>
+  
+{% endblock %}  
+</cardbody>
