--- a/keyflow/typetest/templates/buyBP.html
+++ b/keyflow/typetest/templates/buyBP.html
@@ -1,7 +1,74 @@
 {% extends 'index.html' %}
 
+{% block head %}
+<style>
+    .display {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+    .container {
+        background-color: #fff;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 400px;
+        text-align: center;
+    }
+
+    h2 {
+        font-size: 24px;
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-input {
+        margin-bottom: 15px;
+        width: 100%;
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+    }
+
+    .form-input:focus {
+        outline: none;
+        border-color: #FF99FF;
+    }
+
+    input[type="submit"] {
+        background-color: #9900CC;
+        color: white;
+        margin-top: 20px;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #FF99FF;
+    }
+</style>
+{%endblock%}
 {% block content %}
 <body>
+    <div class = "display">
+    <div class = "container">
     {{ error }}
     <h2>Use code "KEYFLOW" for a FREE BattlePass!!</h2>
     <form action = "" method = "post">
@@ -9,6 +76,8 @@
     {{ form }}
     <input type="submit" value="Purchase">
     </form>
+</div>
+</div>
 </body>
 
 {%endblock%}
