fixed profile picture closes #88

--- a/keyflow/typetest/templates/profile.html
+++ b/keyflow/typetest/templates/profile.html
@@ -150,6 +150,7 @@
                     <img id="pfpimg" src="" />
                 <script>
                     imgName = "{{profilepicture}}";
+                    imgElement = document.getElementById('pfpimg');
                     imgElement.src = `./../static/images/${imgName}pfp.png`;
                     
                 </script>
